--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
-:root {
-  font-family: Quicksand, sans-serif;
+* {
+  font-family:
+    Quicksand,
+    sans-serif,
+    '-apple-system',
+    'BlinkMacSystemFont',
+    'Roboto',
+    '"Apple Color Emoji"',
+    '"Segoe UI Emoji"',
+    '"Segoe UI Symbol"';
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
